--- a/index.html
+++ b/index.html
@@ -2,11 +2,76 @@
 <head>
 	<meta charset="utf-8">
 	<title>Responsive Layout Project</title>
- 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	 <link rel="stylesheet" href="css/styles.css">
- 	 <link rel="stylesheet" href="css/normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
+	<div class="all-content">
+	<header>
+		<h1 class="name">Christopher Taber</h1>
+		<nav >
+			<ul class="main-nav group">
+				<li><a id="home">Home</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+
+		</header>
+
+		<img class="profile" src="images/responsive-layout-profile.png" alt="A Stylized Profile Picture">
+		<p>Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+	
+
+	<main class="main-content">
+		<h2 id="portfolio">Portfolio</h2>
+
+		<img src="images/portfolio-1.png" alt="A graphic representation of a marketing page project">
+		<h3>Marketing Page</h3>
+		<p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+
+		<img src="images/portfolio-2.png" alt="A graphic representation of a search page project">
+		<h3>Search Page</h3>
+		<p>This project searches through a specific database to find information that the user is trying to look up.</p>
+
+		<img src="images/portfolio-3.png" alt="A graphic representation of a travel app project">
+		<h3>Travel App</h3>
+		<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+
+		<img src="images/portfolio-4.png" alt="A graphic representation of a map project">
+		<h3>Map of Favorite Spots</h3>
+		<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+
+		<img src="images/portfolio-5.png" alt="A graphic representation of a photo gallery project">
+		<h3>Photo Gallery</h3>
+		<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+
+		<img src="images/portfolio-6.png" alt="A graphic representation of a calculator project">
+		<h3>Calculator</h3>
+		<p>Someone can enter in the numbers they want and press the big blue button to get the result.</p>
+
+	</main>
+
+
+	<h2 id="contact">Contact</h2>
+	<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+	<p>Phone <span class="contactinfo">+1 (111) 555-1234</span></p>
+	<p>Email <span class="contactinfo">cbtaber@gmail.com</span></p>
+
+	</div>
+
+	<hr>
+	
+
+	<footer class="main-footer group">
+		<span class="footer-name">Christopher Taber</span>
+		<span class="return"><a href="#home">Back to Top</a></span>
+
+	</footer>
+
 
 </body>
 </html>
