--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 	<div class="all-content">
 
 		<div class="upper">
-		<header>
-			<h1 class="name">Christopher Taber</h1>
-			<nav class="group">
-				<ul class="main-nav group">
-					<li><a href="#" id="home">Home</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
+			<header>
+				<h1 class="name">Christopher Taber</h1>
+				<nav class="group">
+					<ul class="main-nav group">
+						<li><a href="#" id="home">Home</a></li>
+						<li><a href="#portfolio">Portfolio</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
 
-		</header>
+			</header>
 
-		<div class="group">
-			<img class="profile" src="images/responsive-layout-profile.png" alt="A Stylized Profile Picture">
-			<p class="profile-text">Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+			<div class="group">
+				<img class="profile" src="images/responsive-layout-profile.png" alt="A Stylized Profile Picture">
+				<p class="profile-text">Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+			</div>
+
 		</div>
-
-	</div>
 
 		<main class="main-content group">
 			<h2 id="portfolio">Portfolio</h2>
@@ -73,11 +74,39 @@
 		</main>
 
 
-		<h2 id="contact">Contact</h2>
-		<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-		<div class="cont-info">
-			<p>Phone <span class="contactinfo">+1 (111) 555-1234</span></p>
-			<p>Email <span class="contactinfo">cbtaber@gmail.com</span></p>
+		<div class="skill-wrap group">
+			<div class="skill-set group">
+
+				<h2 id="skills">Skills</h2>
+				<figure class="skill-col">
+					<img src="images/html5.png" alt="The logo for HTML5">
+					<figcaption class="caption">HTML5</figcaption>
+				</figure>
+				<figure class="skill-col">	
+					<img src="images/css3.png" alt="The logo for CSS3">
+					<figcaption class="caption">CSS3</figcaption>
+				</figure>
+				<figure class="skill-col">
+					<img src="images/photoshop.png" alt="The logo for Adobe Photoshop">
+					<figcaption class="caption">Adobe Photoshop</figcaption>
+				</figure>
+				<figure class="skill-col">
+					<img src="images/illustrator.png" alt="The logo for Adobe Illustrator">
+					<figcaption class="caption">Adobe Illustrator</figcaption>
+				</figure>
+			</div>
+			
+		</div>
+
+		
+
+		<div class="contact-wrap">
+			<h2 id="contact">Contact</h2>
+			<div class="cont-info">
+				<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
+				<p>Phone <span class="contactinfo">+1 (111) 555-1234</span></p>
+				<p>Email <span class="contactinfo">cbtaber@gmail.com</span></p>
+			</div>
 		</div>
 	</div>
 
