--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 		<div class="skill-wrap group">
-			<div class="skill-set group">
+			<div class="skill-set">
 
 				<h2 id="skills">Skills</h2>
 				<figure class="skill-col">
