--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</header>
 
 			<div class="group">
-				<img class="profile" src="images/responsive-layout-profile.png" alt="A Stylized Profile Picture">
+				<img class="profile" src="images/responsive-layout-profile2.png" alt="A Stylized Profile Picture">
 				<p class="profile-text">Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 			</div>
 
@@ -120,6 +120,7 @@
 			<ul class="footer-nav">
 				<li><a href="#home">Home</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#skills">Skills</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
