--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Responsive Layout Project</title>
@@ -25,7 +26,7 @@
 
 			</header>
 
-			<div class="group">
+			<div class="profile-area group">
 				<img class="profile" src="images/responsive-layout-profile2.png" alt="A Stylized Profile Picture">
 				<p class="profile-text">Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
 			</div>
