--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 			<div class="profile-area group">
 				<img class="profile" src="images/responsive-layout-profile2.png" alt="A Stylized Profile Picture">
-				<p class="profile-text">Hi!  I'm a front-end developer who loves responsive design and CSS.  I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+				<p class="profile-text">Hi!  I'm a front-end developer student who is really enjoying learning about responsive design and CSS.  I am excited to finish my degree in front-end web development at Treehouse and look forward to putting all my skills to use!</p>
 			</div>
 
 		</div>
